# salary-predictor

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: main.py
api/model/: salary_model.pkl  train.py
api/models/: schemas.py  text_schemas.py  training_schemas.py
api/routers/: predict.py  text.py  train.py
api/services/: model_service.py  supabase_service.py  text_analysis_service.py  training_service.py
dashboard/: app.py
dashboard/utils/: api_client.py  supabase_client.py
data/: clean.py
data/cleaned/: ds_salaries_clean.csv
model/: encoders.pkl  salary_model.pkl
